# backend/src/routes/roles.routes.ts
@@ -1,9 +1,32 @@
 import { Router } from "express";
 
-import { } from "../controllers/roles.controller";
+import verifyToken from "../middleware/auth.middleware";
 
+import {
+  getAllRoles,
+  searchAndFilterRoles,
+
+  createRoles,
+
+  getRolesById,
+  updateRoles,
+  deleteRoles
+} from "../controllers/roles.controller";
 
 const router = Router();
+
+
+router.get("/getAllRoles", verifyToken, getAllRoles);
+router.get("/searchAndFilterRoles", verifyToken, searchAndFilterRoles);
+
+router.post("/create", createRoles)
+
+
+router
+  .route('/:id')
+  .get(getRolesById)
+  .patch(updateRoles)
+  .delete(deleteRoles);
 
 
 
